# eurocode-calculator

./: .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt
.cursor/rules/: project-core.mdc  python-standards.mdc  structural-engineering.mdc
.cursor/skills/eurocode-calculations/: SKILL.md
.cursor/skills/handoff-session/: SKILL.md
.github/workflows/: ci.yml
docs/: 00-INDEX.md  01-COURS-MASTER.md  02-HANDOFF-IA.md  03-WORKFLOW-HUMAIN-VS-IA.md  04-DEMARRAGE-PROJET.md  05-STRATEGIE-MADIL4.md  DEPLOIEMENT.md
docs/cours/: devops.md  eurocodes.md  fastapi-dev.md  genie-civil.md  python.md
docs/decisions/: ADR-001-stack-technique.md
docs/sessions/: SESSION-001-init.md  SESSION-002-git-lancement.md  SESSION-003-features-deploy.md
scripts/: github-setup.ps1
src/eurocode_calculator/: __init__.py  config.py  main.py
src/eurocode_calculator/core/: __init__.py  ec2_concrete.py  ec3_steel.py  materials.py
src/eurocode_calculator/routers/: __init__.py  beam.py  column.py  foundation.py  report.py
src/eurocode_calculator/schemas/: __init__.py  beam.py  column.py  foundation.py
src/eurocode_calculator/services/: __init__.py  beam_capacity_service.py  beam_service.py  beam_shear_service.py  column_service.py  foundation_service.py  materials_adapter.py  pdf_generator.py  structuralcodes_setup.py
src/eurocode_calculator/templates/: report.html
tests/: conftest.py  test_beam.py  test_column.py  test_foundation.py  test_health.py  test_report.py
