[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eurocode-calculator"
version = "0.1.0"
description = "API REST de vérification Eurocodes pour génie civil"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Hamed" }]
keywords = ["eurocode", "structural-engineering", "fastapi", "ec2", "ec3", "ec7"]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "eurocodepy>=2026.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]
# Capacity-based design via StructuralCodes — requiert triangle (pas de wheel ARM64)
capacity = [
    "structuralcodes>=0.6.0",
]

[project.scripts]
eurocode-api = "eurocode_calculator.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/eurocode_calculator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.coverage.run]
source = ["eurocode_calculator"]
branch = true

[tool.coverage.report]
fail_under = 70
show_missing = true
